issue fixed with wrapper on mobile

--- a/styles/sass/_queries.scss
+++ b/styles/sass/_queries.scss
@@ -1,21 +1,12 @@
-@media (max-width: 1000px) {
-    .wrapper {
-        width: 90%;
-    }
-
-    header {
-        height: 70vh;
-        &::after {
-            bottom: 1%;
-        }
-    }
-}
+// @media (max-width: 1000px) {
+//     .wrapper {
+//         width: 90%;
+//     }
+// }
 
 @media (max-width: 768px) {
 
     header {
-        height: 90vh;
-        bottom: 1%;
         &::after {
             box-shadow: inset 100px 50px 40px 0px rgb(255, 255, 255), 
             inset -100px -100px 50px 0px rgb(255, 255, 255), 
@@ -126,8 +117,6 @@
 @media (max-width: 540px) {
 
     header {
-        height: 70vh;
-        bottom: 1%;
         &::after {
             box-shadow: inset 50px 50px 40px 0px rgb(255, 255, 255), 
             inset -50px -100px 50px 0px rgb(255, 255, 255), 
@@ -167,4 +156,18 @@
             width: 50%;
         }
     }
+}
+
+@media (max-width: 380px) {
+
+    .footer {
+        &__list {
+            flex-direction: column;
+            align-items: center;
+        }
+        &__link {
+            margin-top: 15px;
+        };
+    }
+
 }
